separated the extraction and injection data types for coherency, made the
fixed gradle???